tests/ui/privacy/private-type-in-interface.stderr
error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:17:9
   |
LL | fn f(_: m::Alias) {}
   |         ^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:17:6
   |
LL | fn f(_: m::Alias) {}
   |      ^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:19:13
   |
LL | fn f_ext(_: ext::Alias) {}
   |             ^^^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:19:10
   |
LL | fn f_ext(_: ext::Alias) {}
   |          ^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:23:6
   |
LL | impl m::Alias {}
   |      ^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:24:14
   |
LL | impl Tr1 for ext::Alias {}
   |              ^^^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:25:10
   |
LL | type A = <m::Alias as m::Trait>::X;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^ private type

error: type `Priv` is private
  --> $DIR/private-type-in-interface.rs:29:11
   |
LL | fn g() -> impl Tr2<m::Alias> { 0 }
   |           ^^^^^^^^^^^^^^^^^^ private type

error: type `ext::Priv` is private
  --> $DIR/private-type-in-interface.rs:30:15
   |
LL | fn g_ext() -> impl Tr2<ext::Alias> { 0 }
   |               ^^^^^^^^^^^^^^^^^^^^ private type

error: aborting due to 9 previous errors

